dark mode fix

--- a/public/styles/SCSS/main.scss
+++ b/public/styles/SCSS/main.scss
@@ -8,3 +8,17 @@
 @import "Search";
 @import "Auth";
 @import "Overlay";
+
+
+@media (prefers-color-scheme: dark) {
+    @import "Global";
+    @import "Header";
+    @import "Footer";
+    @import "Index";
+    @import "Plant-card";
+    @import "Plant-details";
+    @import "Profile";
+    @import "Search";
+    @import "Auth";
+    @import "Overlay";
+}
